# serde-devo

./: .gitignore  Cargo.toml  README.md
serde-devo/: Cargo.toml  README.md
serde-devo-derive/: Cargo.toml
serde-devo-derive/src/: lib.rs
serde-devo-tests/: Cargo.toml
serde-devo-tests/src/: lib.rs
serde-devo/src/: lib.rs
