[workspace]
members = [
    "serde-devo",
    "serde-devo-derive",
    "serde-devo-tests",
]
resolver = "2"

[workspace.package]
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
ciborium = "0.2"
quote = "1"
proc-macro2 = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-devo = { path = "./serde-devo", version = "0.1.0", features = ["json"] }
serde-devo-derive = { path = "./serde-devo-derive", version = "0.1.0", features = ["json"] }
syn = { version = "2", features = ["full", "extra-traits"] }