[package]
name = "serde-devo-derive"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
json = ["serde_json"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
syn.workspace = true