[package]
name = "serde-devo-derive"
categories = ["encoding", "parsing"]
description = "A derive macro for shared type compatibility"
keywords = ["encoding", "serde", "compatibility", "derive", "macro"]
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/nicksenger/serde-devo"

[features]
default = []
json = ["serde_json"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
syn.workspace = true