[package]
name = "serde-devo-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
ciborium.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde-devo = { workspace = true, features = ["json"] }
serde_json.workspace = true