[package]
name = "serde-devo"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
json = ["serde_json", "serde-devo-derive/json"]

[dependencies]
serde.workspace = true
serde-devo-derive.workspace = true
serde_json = { workspace = true, optional = true }