[package]
name = "serde-devo"
categories = ["encoding", "parsing"]
description = "A shared type compatibility helper"
keywords = ["encoding", "serde", "compatibility"]
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/nicksenger/serde-devo"

[features]
default = []
json = ["serde_json", "serde-devo-derive/json"]

[dependencies]
serde.workspace = true
serde-devo-derive.workspace = true
serde_json = { workspace = true, optional = true }